# airflow_course

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  airflow-requirements.txt  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: dag-validation.yaml
chapter-2/: scraping_dag.py
chapter-3/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  iam.py  mwaa.py
chapter-3/airflow/: requirements.txt
dags/: flow.py  redshift_etl.py  secrets_test.py  test_parallel.py
docker-compose/: README.md  airflow.cfg  docker-compose.yaml
kubernetes/: README.md  airflow-values.yaml  elastic-stack.yaml  grafana.yaml  prometheus.yaml
mwaa_public/: Pulumi.dev.yaml  __main__.py  dashboard.py  dbs.py  network.py
mwaa_public/airflow/: pyrightconfig.json  requirements.txt
mwaa_public/airflow/dags/: flow.py  redshift_etl.py  test_parallel.py
mwaa_public/airflow/dags/sql/: redshift_aurora.sql
pulumi/localstack/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py
tests/: test_dag_import.py
